# proj-clarion

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  START_HERE.md  justfile  pyproject.toml
.claude/: settings.json
data/reference/: business-command-center.example.json
deploy/alloy/: config.alloy
deploy/clarion-obs/: .env.example  README.md  config.alloy  docker-compose.yml
deploy/db-observability/: README.md  config.alloy  docker-compose.yml  init-monitoring-user.sql  postgresql.conf.snippet
deploy/docker/: compose.yaml
docs/: clarion-model.md  design.md  handoff-to-claude-code.md
grafana/: README.md  clarion-dashboard.json
infra/grafana/: clarion-business-model.yaml
scripts/: check-no-secrets.sh  smoke_alloy.py  smoke_test_industries.py  up_cloud.sh
src/proj_clarion/: __init__.py
src/proj_clarion/agents/: __init__.py  clarion_tools.py  fetcher.py  planner.py  research.py
src/proj_clarion/api/: __init__.py  cloud_creds.py  links.py  main.py  pipeline.py  pipeline_registry.py  runner.py  url_input.py
src/proj_clarion/cli/: main.py
src/proj_clarion/generator/: __init__.py  diurnal.py  events.py  incident.py  telemetry.py  topology.py
src/proj_clarion/kg_publish/: __init__.py  doctor.py  emitter.py  expand.py  log_emitter.py  model_rules.py  prom_rules.py  red_emitter.py
src/proj_clarion/livetail/: __init__.py  cursor.py  emitter.py  preflight.py  runner.py
src/proj_clarion/observability/: __init__.py  evals.py  health.py  llm_client.py  otlp.py  policy.py  preflight.py  sigil_helper.py  tools.py
src/proj_clarion/provision/: __init__.py  alerts.py  assembler.py  client.py  command_center.py  dashboards.py  folders.py  gs_refine.py
src/proj_clarion/schemas/: __init__.py  company_profile.py  demo_plan.py  incident_script.py  knowledge_graph.py  plan_refinement.py
src/proj_clarion/storage/: __init__.py  db.py  migrator.py  repositories.py
tests/fixtures/: acme_retail_profile.json  northwind_profile.json
tests/integration/: conftest.py  test_generator.py  test_livetail.py  test_livetail_preflight.py  test_plan_pipeline.py  test_storage.py
tests/unit/: test_emitter_model_alignment.py  test_livetail_cursor.py  test_livetail_preflight.py  test_observability_otlp.py  test_planner.py  test_provision.py  test_research_sources.py  test_schemas.py
ui/: .npmrc  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: ActiveSessionStrip.tsx  AddProfileModal.tsx  Badge.tsx  Button.tsx  Card.tsx  ClarionAssistant.tsx  CodeBlock.tsx  CommandPalette.tsx  ConfirmDialog.tsx  CrumbChip.tsx  DemoSessionCard.tsx  DrilldownPanel.tsx  HeroBuildCard.tsx  (+17 more)
(+69 files in other folders)
