[project]
name = "proj-clarion"
version = "0.1.0"
description = "Proj Clarion — turns a prospect URL into a live business observability demo on Grafana"
requires-python = ">=3.11"
authors = [{ name = "Proj Clarion team" }]
readme = "README.md"
license = { text = "Apache-2.0" }
dependencies = [
    "pydantic>=2.7",
    "anthropic>=0.40",
    "langgraph>=0.2",
    "langchain-anthropic>=0.2",
    "httpx>=0.27",
    "structlog>=24.1",
    "click>=8.1",
    "rich>=13.7",
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0",
    "openlit>=1.30",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "python-dotenv>=1.0",
    "tenacity>=9.0",
    "trafilatura>=1.12",
    "beautifulsoup4>=4.12",
    # Grafana Sigil — generation-first AI observability ingest. The Anthropic
    # helper wraps `messages.create` and emits a normalized Generation record
    # with parent-generation chaining for multi-agent dependency tracking.
    "sigil-sdk>=0.2",
    "sigil-sdk-anthropic>=0.2",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "sse-starlette>=3.4.2",
    "opentelemetry-instrumentation-system-metrics>=0.62b1",
    "opentelemetry-instrumentation-fastapi>=0.62b1",
    "pyroscope-io>=1.0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "respx>=0.21",
    # testcontainers spins up an ephemeral Postgres for the storage + plan
    # pipeline integration tests, per the v0.2 brief. Marked as integration so
    # `just test` (unit only) does not require Docker.
    "testcontainers[postgres]>=4.7",
]

[project.scripts]
proj-clarion = "proj_clarion.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proj_clarion"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "PT", "RET", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Default test run skips integration; opt in with `just test-integration` or
# `pytest -m integration` to spin up testcontainers.
addopts = "-v --tb=short -m 'not integration'"
markers = [
    "integration: requires Docker (testcontainers); run with `just test-integration`",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
ignore_missing_imports = true
